--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/j/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/j/index.xhtml
@@ -70,6 +70,7 @@
                     <div id="J7_1" tabindex="3" style="margin-top: 10px;">
                         <div  class="cell" tabIndex="-1"
                              data-bind="ntsRadioButton: {
+                                        value: transferMethod,
 										checked: transferMethod,
 										option: itemList()[0],
 										optionValue: 'code',
