--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/a/qmm019.a.style.css
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/a/qmm019.a.style.css
@@ -1,3 +1,12 @@
+#functions-area {
+    min-width: 1260px;
+}
+
+#contents-area {
+    min-width: 1260px;
+    overflow-y: inherit;
+}
+
 #contents-area .table{
     width: 1220px;
     padding: 15px;
@@ -30,6 +39,14 @@
 
 #A3_4 {
     margin-right: 20px;
+}
+
+#A3_10 {
+    margin-right: 5px;
+}
+
+#A3_1011 {
+    white-space: pre;
 }
 
 #A4_1, #A5_1, #A7_1, #A8_1 {
