Fix lỗi giao diện QMM019

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/h/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/h/index.xhtml
@@ -59,7 +59,7 @@
                             { prop: 'statementName', length: 20 },
                         ]}"/>
                 </div>
-                <div class="cell valign-center">
+                <div class="cell valign-center" style="white-space: nowrap;">
                     <com:ko-if bind="(layoutPatternCloneText() != '')">
                         <label>（ </label>
                         <!--H1_7-->
