qmm017 update fix bug ut

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/d/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/d/index.xhtml
@@ -39,7 +39,7 @@
                                 <i class="search-icon"></i>
                                 <div class = "search-box-sm" data-bind="ntsSearchBox: {
                                     searchMode: 'highlight',
-                                    targetKey: 'itemNameCd',
+                                    targetKey: 'code',
                                     comId: 'D2_5',
                                     items: statementItemList,
                                     selectedKey: 'code',
