--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/i/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/i/index.xhtml
@@ -29,7 +29,7 @@
 			<div style="margin-top: 20px; min-width: 550px">
 				<div style="width: 130px;"
 					 data-bind="ntsFormLabel: {required: true}" >#{i18n.getText('QMM017_162')}</div>
-				<div style="width: 200px; display: inline-flex; position: absolute">
+				<div style="width: 200px; display: inline-flex; position: absolute; left: 165px;">
 					<div id="I1_6" tabindex="1"
 						 data-bind="ntsRadioBoxGroup: {
 										value: modifyMethod,
@@ -39,7 +39,7 @@
 										optionsText: 'name'}"></div>
 
 				</div>
-				<span style = "position: absolute; z-index: -1; margin-top: 30px; margin-left: 10px;" class="label warning tab-row">#{i18n.getText('QMM017_164')}</span>
+				<span style = "position: absolute; z-index: -1; margin-top: 30px; margin-left: 10px; white-space: pre-line" class="label warning tab-row">#{i18n.getText('QMM017_164')}</span>
 				<div style="margin-top: 100px; margin-left: 150px;  min-width: 420px">
 					<div style="width: 100px; display: inline-block"
 						 data-bind="ntsFormLabel: {required: true}">#{i18n.getText('QMM017_165')}</div>
