--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/a/a.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/a/a.xhtml
@@ -25,7 +25,7 @@
             <div style="margin-top: 10px;">
                 <!--A2_4 履歴追加ボタン-->
                 <button class = "small" id="A2_4" tabindex="7"
-                        data-bind="click: createNewHistory, enable: isUpdateMode">#{i18n.getText('QMM017_9')}</button>
+                        data-bind="click: createNewHistory, enable: isUpdateMode() || screenMode () == 3">#{i18n.getText('QMM017_9')}</button>
                 <!--A2_5 履歴編集ボタン-->
                 <button class = "small" style="float: right" id="A2_5" tabindex="8"
                         data-bind="click: editHistory, enable: isUpdateMode() ? isSelectedHistory() : false">#{i18n.getText('QMM017_10')}</button>
@@ -53,7 +53,7 @@
         <div tabindex="10" id="tab-panel" data-bind="ntsTabPanel: { dataSource: tabs, active: selectedTab}"
              style="width: 850px; margin-bottom: 20px;">
             <div class="tab-content-1" data-bind="with: selectedFormula">
-                <div class="tab-row">
+                <div data-bind = "if: $vm.isNewMode"  class="tab-row">
                     <!--A3_1-->
                     <div class="label warning">#{i18n.getText('QMM017_11')}</div>
                 </div>
@@ -109,7 +109,7 @@
                             <div data-bind="with: $vm.basicFormulaSetting">
                                 <div class="tab-row-medium">
                                     <!--A3_14-->
-                                    <span class="label">#{i18n.getText('QMM017_20')}</span>
+                                    <span style = "white-space: pre-line" class="label">#{i18n.getText('QMM017_20')}</span>
                                 </div>
                                 <div class="tab-row-medium">
                                     <!--A3_15-->
@@ -129,10 +129,10 @@
                                 <div class="tab-row-medium">
                                     <div data-bind="ntsFormLabel: { required: true }">#{i18n.getText('QMM017_23')}</div>
                                     <div style="vertical-align: middle" tabindex="16" data-bind="ntsComboBox: {
-                                                    name: '#[QMM016_6]',
+                                                    name: '#[QMM017_23]',
                                                     options: masterUseItem,
                                                     optionsValue: 'value',
-                                                    visibleItemsCount: 5,
+                                                    visibleItemsCount: 6,
                                                     value: masterUse,
                                                     optionsText: 'name',
                                                     enable: $vm.isNewMode,
