--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/c/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/c/index.xhtml
@@ -43,7 +43,7 @@
                     </th>
                     <th>
                         <!--C2_6-->
-                        <div data-bind = "visible: calculationFormulaClassification() == 0">
+                        <div data-bind = "if: calculationFormulaClassification() == 0">
                             <input tabindex="12" data-bind="ntsNumberEditor: {
                                 value: basicCalculationFormula,
                                 constraint: 'FixedAmount',
@@ -53,7 +53,7 @@
                                 },
                                 required: true}" />
                         </div>
-                        <div data-bind = "visible: calculationFormulaClassification() == 1">
+                        <div data-bind = "if: calculationFormulaClassification() == 1">
                             <!--C2_7; C2_8-->
                             <button data-bind = "click: function(){$vm.doMasterConfiguration()}" tabindex="13">#{i18n.getText('QMM017_27')}</button>
                             <div style = "display: inline-block" data-bind = "text: displaySetting"></div>
@@ -97,7 +97,7 @@
                     </td>
                     <td>
                         <!--C3_10-->
-                        <div data-bind = "visible: calculationFormulaClassification() == 0">
+                        <div data-bind = "if: calculationFormulaClassification() == 0">
                             <input tabindex="17" data-bind="ntsNumberEditor: {
                                 value: basicCalculationFormula,
                                 constraint: 'FixedAmount',
