qmm016: update fix bug

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/b.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/b.xhtml
@@ -71,7 +71,7 @@
     </div>
     <div class="tab-row" style="margin-left: 75px; width: 500px; text-align: center;">
         <button data-bind="click: $vm.createOneDimensionWageTable" style="width: 400px;"
-                class="caret-bottom large-caret">#{i18n.getText('QMM016_35')}</button>
+                class="caret-bottom large-caret large">#{i18n.getText('QMM016_35')}</button>
     </div>
     <div class="tab-row" style="margin-top: 40px;">
         <div data-bind="ntsFormLabel: {required: false}">#{i18n.getText('QMM016_36')}</div>
