--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/e.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/e.xhtml
@@ -50,7 +50,7 @@
         </div>
         <div class="tab-row" style="margin-left: 75px; width: 500px; text-align: center;">
             <button data-bind="click: $vm.createWageTableQualification" style="width: 400px;"
-                    class="caret-bottom large-caret">#{i18n.getText('QMM016_35')}</button>
+                    class="caret-bottom large-caret large">#{i18n.getText('QMM016_35')}</button>
         </div>
         <div class="tab-row" style="margin-top: 40px;">
             <div data-bind="ntsFormLabel: {required: false}">#{i18n.getText('QMM016_36')}</div>
