--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/h/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/h/index.xhtml
@@ -105,7 +105,7 @@
                             columns: columns,
                             value: selectedEligibleQualificationCode,
                             searchMode: 'highlight',
-                            searchCriterion: ['qualificationCode'],
+                            searchCriterion: ['qualificationCode', 'qualificationName'],
                             draggable: true,
                             multipleDrag: { left: true, right: false },
                             innerDrag: { left: false, right: true },
