Fix bug UT QMM019

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/b/qmm019.b.style.css
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/b/qmm019.b.style.css
@@ -1,5 +1,9 @@
 #contents-area {
-    padding: 20px !important;
+    padding-left: 20px !important;
+}
+
+#contents-area  .valign-center {
+    width: 1010px;
 }
 
 #B1_3 {
