--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/j/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/j/index.xhtml
@@ -29,7 +29,7 @@
 			<div style="margin-top: 20px; min-width: 550px">
 				<div style="width: 130px;"
 					 data-bind="ntsFormLabel: {required: true}" >#{i18n.getText('QMM016_79')}</div>
-				<div style="width: 200px; display: inline-flex; position: absolute">
+				<div style="width: 200px; display: inline-flex; position: absolute; left: 153px">
 					<div id="J3_2" tabindex="1" style="padding-top: 7px"
 						 data-bind="ntsRadioBoxGroup: {
 										value: modifyMethod,
