--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdw/001/e/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdw/001/e/index.xhtml
@@ -76,7 +76,7 @@
 					<table class="info-table">
 						<tr>
 							<td class="fix-width">#{i18n.getText('KDW001_15')}</td>　
-							<td><span data-bind="text: startPeriod"></span> ～ <span data-bind="text: endPeriod"></span></td>
+							<td><span data-bind="visible : disableDayResult()"><span data-bind="text: startPeriod"></span> ～ <span data-bind="text: endPeriod"></span></span></td>
 						</tr>
 						<tr >
 							<td class="fix-width">#{i18n.getText('KDW001_117')}</td>　
