--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdw/001/c/kdw001.c.main.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdw/001/c/kdw001.c.main.css
@@ -7,7 +7,6 @@
 }
 
 #kcp005{
-	height: 325px !important;
 	width: 562px;
     margin-left: 105px;
     margin-top: 2px;
@@ -26,8 +25,8 @@
 #formLabe12{
 	float: left;
 }
-#component-items-list{
-	    margin-top: -25px;
+
+#contents-area{
+	overflow-y: hidden;
+	overflow-x: hidden;
 }
-
-
