--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/e/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/e/index.xhtml
@@ -77,19 +77,20 @@
                             <div style = "margin-left: 115px;">
                                 <!--E3_4; E2_5-->
                                 <div data-bind = "if: standardAmountClassification() != 0">
-                                    <button data-bind = "click: function(){$vm.selectTargetItem()}" tabindex = "4">#{i18n.getText('QMM017_107')}</button>
-                                    <input data-bind="ntsNumberEditor: {
+                                    <button id = "E2_4" data-bind = "click: function(){$vm.selectTargetItem()}" tabindex = "4">#{i18n.getText('QMM017_107')}</button>
+                                    <input data-bind="ntsTextEditor: {
                                         value: $vm.baseAmountTargetItem,
-                                        required: true,
                                         enable: false}" />
                                 </div>
                                 <!--E2_6-->
                                 <div  data-bind = "if: standardAmountClassification() == 0">
                                     <div style = "height: 33px;" >
-                                        <input tabindex="5" data-bind="ntsNumberEditor: {
+                                        <input id = "E2_6" tabindex="5" data-bind="ntsNumberEditor: {
                                             value: standardFixedValue,
                                             option: {
-                                                unitID: 'JPY'
+                                                width: '200px',
+                                                unitID: 'JPY',
+                                                grouplength: 3
                                             },
                                             constraint: 'BasePriceFixedAmount',
                                             name: '#[QMM017_108]',
@@ -103,13 +104,15 @@
                                      data-bind="ntsFormLabel: {required: true}">#{i18n.getText('QMM017_110')}</div>
                                <!--E3_2-->
                                 <div style="display: inline-block; vertical-align: middle">
-                                    <div tabindex="6" data-bind="ntsComboBox: {
+                                    <div style = "" tabindex="6" data-bind="ntsComboBox: {
                                         name: '#[QMM017_111]',
+                                        width: '335px',
                                         options: baseItemClassificationItem,
                                         optionsValue: 'value',
                                         visibleItemsCount: 5,
                                         value: baseItemClassification,
                                         optionsText: 'name',
+                                        dropDownAttachedToBody: true,
                                         columns: [
                                             { prop: 'name', length: 10 }
                                         ]}">
@@ -117,8 +120,11 @@
                                 </div>
                                 <!--E3_4-->
                                 <div style = "margin-left: 115px;" >
-                                    <input tabindex="7" data-bind="ntsNumberEditor: {
+                                    <input id = "E3_4" tabindex="7" data-bind="ntsNumberEditor: {
                                         value: baseItemFixedValue,
+                                        option: {
+                                            width: '178px'
+                                        },
                                         constraint: 'BaseItemFixedValue',
                                         name: '#[QMM017_111]',
                                         enable: baseItemClassification() == 0,
@@ -134,6 +140,7 @@
                                     <input tabindex="8" data-bind="ntsNumberEditor: {
                                         value: premiumRate,
                                         option: {
+                                            width: '200px',
                                             unitID: 'PERCENT'
                                         },
                                         constraint: 'PremiumRate',
@@ -180,9 +187,12 @@
                             <div style = "margin-left: 115px;">
                                 <div >
                                     <!--E6_4-->
-                                    <input tabindex="11" data-bind="ntsNumberEditor: {
+                                    <input id = "E6_4" tabindex="11" data-bind="ntsNumberEditor: {
                                         value: coefficientFixedValue,
                                         constraint: 'CoefficientFixedValue',
+                                        option: {
+                                            width: '178px'
+                                        },
                                         name: '#[QMM017_111]',
                                         enable: coefficientClassification() == 0,
                                         required: true}" />
