--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/021/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/021/a/index.xhtml
@@ -73,7 +73,7 @@
 					</div>
 
 					<!-- Searchbox A6_1-->
-					<div class="searchbox">
+					<!-- <div class="searchbox">
 						<div tabindex="-1"
 							data-bind="ntsSearchBox:{
 							             searchMode: 'filter',
@@ -85,7 +85,7 @@
 										 fields: ['loginId', 'employeeCode','businessName','isSetting'], 
 										 mode: 'igGrid'
 							 }" />
-					</div>
+					</div> -->
 
 					<!-- table grid list -->
 					<!-- A7_1 -->
