--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/021/a/style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/021/a/style.css
@@ -14,7 +14,8 @@
 }
 
 .master-list-select .caret-right.caret-background {
-	width: 520px;
+	height: 580px;
+    width: 527px;
 	border-radius: 10px;
 }
 
