--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/b/cps003.b.style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/b/cps003.b.style.css
@@ -1,3 +1,6 @@
+#contents-area {
+	height: initial !important;
+}
 #display{
 	height: 115px;
 }
@@ -15,7 +18,7 @@
 #reference-area{
 	border-top: solid 1px #B1B1B1;
 	margin-top: 30px;
-	height: 200px;
+	height: 150px;
 	margin-left: 10px;
 }
 
@@ -31,4 +34,7 @@
 #diplay-size{
 	margin-left: 52px;
 	font-size: 10px;
+}
+#register{
+	margin-top: 15px;
 }
