--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/004/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/004/a/index.xhtml
@@ -48,6 +48,7 @@
 				<button tabindex="2" data-bind="click: saveCompanySettingNewest, enable: $root.errors.isEmpty" class="proceed">#{i18n.getText('KMK004_27')}</button>
 				<!-- <button tabindex="4" class="danger" data-bind="click: removeCompanySetting, disable: isNewMode">#{i18n.getText('KMK004_29')}</button> -->
 				<button tabindex="3" id="btn-usage-unit" class="" data-bind="click: gotoE">#{i18n.getText('KMK004_30')}</button>
+				<button tabindex="3" id="print-button" data-bind="click: saveAsExcel" style="width: 120px;">#{i18n.getText('KMK004_193')}</button>
 				<!-- <button class="" data-bind="click: gotoF">#{i18n.getText('KMK004_30')}</button>
 				<button class="" data-bind="click: gotoG">#{i18n.getText('KMK004_30')}</button>
 				<button class="" data-bind="click: gotoH">#{i18n.getText('KMK004_30')}</button> -->
