--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/003/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/003/a/index.xhtml
@@ -32,6 +32,8 @@
 					data-bind="click: addFunction, enable: $root.errors.isEmpty">#{i18n.getText('KMF003_4')}</button>
 				<button id="A_BTN_003" data-bind="click: deleteFunction, enable: !editMode()"
 					class="danger">#{i18n.getText('KMF003_6')}</button>
+				<button  tabindex="5" id="print-button" data-bind="click: exportExcel">#{i18n.getText('KMK007_4')}</button> 	
+				
 			</div>
 			<!-- END FUNCTION AREA-->
 
