--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/051/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/051/a/index.xhtml
@@ -36,7 +36,7 @@
 				<button class="danger"
 					data-bind="click: delWkpManager, enable: !isNewMode()" tabindex="3">#{i18n.getText('CMM044_6')}</button>
 				<!-- export excel -->
-				<button id="print-button" data-bind="click: exportExcel">#{i18n.getText('KMK007_4')}</button>
+				<button id="print-button" data-bind="click: saveAsExcel">#{i18n.getText('CMM051_34')}</button>
 			</div>
 			<div id="contents-area">
 				<div id="wkp-component"></div>
