--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/d/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/d/index.xhtml
@@ -389,9 +389,20 @@
                             <button data-action = "NOT_EQUAL" data-bind = "click: addSymbol">#{i18n.getText('QMM017_75')}</button>
                         </div>
                     </div>
+
                     <div style="display: inline-block">
-                        <textarea id = "D3_5" style = "height: 215px; width: 458px;" data-bind="ntsMultilineEditor: {
+                        <div id="auto-complete">
+                            <select style = "display: none; width: 150px;" size="5" id="auto-complete-containner" data-bind="options: autoComplete, optionsText: 'displayText', value: autoSelected">
+                            </select>
+                            <div id="error-content">
+                                <div id="error-containner"><span id="error-messege"></span></div>
+                            </div>
+                        </div>
+                        <div id="input-content-area" data-bind="html: divValue"></div>
+                        <div id="input-area">
+                            <textarea id = "D3_5" style = "height: 215px; width: 458px;" data-bind="ntsMultilineEditor: {
                                 value: displayDetailCalculationFormula}" />
+                        </div>
                     </div>
                 </div>
             </div>
